<resources>
    <string name="app_name">Create REST API with CakePHP</string>
    <string name="option_1">Install CakePHP 3</string>
    <string name="option_2">Create and connect to database</string>
    <string name="option_3">Create CRUD</string>
    <string name="option_4">Install API Plugin</string>
    <string name="option_5">Test REST API</string>
    <string name="author">ramb0Ram</string>

    <string name="url_github">GitHub Project</string>

    <!-- 1 -->
    <string name="requirements">Requirements</string>
    <string name="requirements_text">
        HTTP Server, PHP 5.5.9 or greater (including PHP 7), MySQL (5.1.10 or greater), Composer
    </string>

    <string name="install_cake">How install CakePHP</string>
    <string name="install_cakek_text">composer self-update  &amp;&amp; composer create-project --prefer-dist cakephp/app my_app_name</string>
    <string name="move_to_project">cd my_app_name</string>

    <string name="permissions">Permissions</string>
    <string name="permission_text_1">HTTPDUSER=`ps aux | grep -E \'[a]pache|[h]ttpd|[_]www|[w]ww-data|[n]ginx\' | grep -v root | head -1 | cut -d\  -f1`</string>
    <string name="permission_text_2">setfacl -R -m u:${HTTPDUSER}:rwx tmp</string>
    <string name="permission_text_3">setfacl -R -d -m u:${HTTPDUSER}:rwx tmp</string>
    <string name="permission_text_4">setfacl -R -m u:${HTTPDUSER}:rwx logs</string>
    <string name="permission_text_5">setfacl -R -d -m u:${HTTPDUSER}:rwx logs</string>

    <string name="fire_it_up">Fire It Up</string>
    <string name="fire_it_up_text">Alright, let’s see CakePHP in action. Depending on which setup you used, you should point your browser to http://example.com/ or http://localhost:8765/.</string>

    <string name="create_database">Create Database and Migrate Schema</string>
    <string name="create_database_text_1">mysql -u root -p</string>
    <string name="create_database_text_2">create database udacity-rest-api</string>
    <string name="create_database_text_3">Download this CakePHP database migration file to your config/Migrations directory: https://github.com/bravo-kernel/application-examples/blob/master/blog-how-to-use-a-cakephp3-rest-api/config/Migrations/20150411161731_initial.php</string>
    <string name="create_database_text_4">bin/cake migrations migrate</string>

    <string name="connect_to_database">Connect to Database</string>
    <string name="connect_to_database_text_1">The configuration should be pretty straightforward: just replace the values in the Datasources.default array in the config/app.php file with those that apply to your setup. </string>
    <string name="connect_to_database_text_2">Where :</string>
    <string name="connect_to_database_text_3">driver: Cake\Database\Driver\Mysql</string>
    <string name="connect_to_database_text_4">username: root</string>
    <string name="connect_to_database_text_5">password: your_password</string>
    <string name="connect_to_database_text_6">database: udacity-rest-api</string>

    <string name="add_plugin">Add Plugin</string>
    <string name="all_plugin_text_1">composer require friendsofcake/crud:~4.0</string>
    <string name="all_plugin_text_2">bin/cake plugin load Crud</string>

    <string name="enable_api">Enable API</string>
    <string name="enable_api_text_1">Expose one or more controllers. Open config/routes.php file and add:</string>
    <string name="enable_api_text_2">Router::scope(\'/\', function ($routes) { $routes->resources(\'Cocktails\'); } </string>
    <string name="enable_api_text_3">Configure the API. Open src/Controller/AppController.php file and add in AppController:</string>
    <string name="enable_api_text_4">use \Crud\Controller\ControllerTrait;</string>
    <string name="enable_api_text_5">Optionally enable extensions. OPen onfig/routes.php and add:</string>
    <string name="enable_api_text_6">Router::extensions([\'json\', \'xml\']);</string>

    <string name="accessing_api">Accessing API Resources</string>
    <string name="accessing_api_text_1">Visit http://your_app/cocktails.json</string>

    <string name="more_info">More Info</string>
    <string name="more_info_text">http://www.bravo-kernel.com</string>

</resources>
