<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.udacityprojectprepfinal.DataBase">

        <TextView
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_2" />

        <TextView
            style="@style/SubTitle"
            android:text="@string/create_database" />

        <TextView
            style="@style/Content"
            android:text="@string/create_database_text_1" />

        <TextView
            style="@style/Content"
            android:text="@string/create_database_text_2" />

        <TextView
            style="@style/Content"
            android:text="@string/create_database_text_3" />

        <TextView
            style="@style/Content"
            android:text="@string/create_database_text_4" />

        <TextView
            style="@style/SubTitle"
            android:text="@string/connect_to_database" />

        <TextView
            style="@style/Content"
            android:text="@string/connect_to_database_text_1" />

        <TextView
            style="@style/Content"
            android:text="@string/connect_to_database_text_2" />

        <TextView
            style="@style/Content"
            android:text="@string/connect_to_database_text_3" />

        <TextView
            style="@style/Content"
            android:text="@string/connect_to_database_text_4" />

        <TextView
            style="@style/Content"
            android:text="@string/connect_to_database_text_5" />

        <TextView
            style="@style/Content"
            android:text="@string/connect_to_database_text_6" />

    </LinearLayout>
</ScrollView>