<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.udacityprojectprepfinal.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/cakephp" />

        <Button
            android:id="@+id/btnInstall"
            style="@style/MenuOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="redirectToInstall"
            android:text="@string/option_1" />

        <Button
            style="@style/MenuOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="redirectToDataBase"
            android:text="@string/option_2" />

        <Button
            style="@style/MenuOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="redirectToCreateCrud"
            android:text="@string/option_3" />

        <Button
            style="@style/MenuOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="redirectToPlugin"
            android:text="@string/option_4" />

        <Button
            style="@style/MenuOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="redirectToTestApi"
            android:text="@string/option_5" />

        <Button
            style="@style/BtnLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="redirectToGitHub"
            android:text="@string/url_github" />

    </LinearLayout>
</ScrollView>


